NewArchive/d34ff83c1f398d24e61206daadb3d494-4f0e144d2529f0880899ab58231ebbe3/output
main.cpp:42:8: error: ‘FooContainer’ is not a class template
 struct FooContainer<T, typename boost::enable_if<boost::is_base_and_derived<IFoo, T>::value >::type > {
        ^
main.cpp:42:93: error: type/value mismatch at argument 1 in template parameter list for ‘template<class Cond, class T> struct boost::enable_if’
 struct FooContainer<T, typename boost::enable_if<boost::is_base_and_derived<IFoo, T>::value >::type > {
                                                                                             ^
main.cpp:42:93: error:   expected a type, got ‘boost::is_base_and_derived<IFoo, T>::value’
